# automatica-test-task

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
automatica_test_task/: asgi.py  settings.py  urls.py  wsgi.py
visits/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
visits/fixtures/: retail_points.json  visits.json  workers.json
visits/migrations/: 0001_initial.py  0002_rename_salespoint_visit_retail_point_and_more.py
